# space_editor

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  TODO.md  _typos.toml  deny.toml  publish.bat  schedules.dot
.cargo/: config.toml
.config/: hakari.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/example-run/: data.ron  external_plugin.ron  platformer.ron  spawn_prefab_with_physics.ron
.github/workflows/: ci.yaml  ci_develop.yaml  coverage.yml  dependencies.yml  example_validation.yml  examples.yaml  flamegraph.yml
assets/: .scn.ron  Pug.gltf  aaa.scn.ron  colone.glb  credits.txt  cube.scn.ron  cubes_camera_test.scn.ron  gate.scn.ron  level.scn.ron  level_test.scn.ron  low_poly_fighter_2.gltf  monster.scn.ron  parent_test.scn.ron  physics_loading_test.scn.ron  physics_object.scn.ron  plane.glb  sssssss.scn.ron  test.prefab  test.scn.ron  test_open_gltf.scn.ron  tile.scn.ron
assets/default_terrain/: terrain_config.ron
assets/icons/: editor.icons.ron
assets/models/: colone.glb  cube.glb  low_poly_fighter_2.gltf
assets/scenes/: Scene0.scn.ron  cube.scn.ron  cubes_camera_test.scn.ron  gate.scn.ron  level.scn.ron  level_test.scn.ron  load_test.scn.ron  model_with_collider.scn.ron  monster.scn.ron  parent_test.scn.ron  physics_loading_test.scn.ron  physics_object.scn.ron  platformer.scn.ron  test.scn.ron  test_open_gltf.scn.ron  tile.scn.ron
assets/shaders/: fog.wgsl  noise.wgsl  simple.wgsl  sprite.wgsl  sprite_prepass.wgsl  terrain.wgsl  terrain_pipeline.wgsl  terrain_uniforms.wgsl  voxel_data.wgsl
crates/bevy_xpbd_plugin/: Cargo.toml
crates/bevy_xpbd_plugin/src/: collider.rs  lib.rs  registry.rs  spatial_query.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/editor/: Cargo.toml
crates/editor/src/: bot_menu.rs  debug_panels.rs  editor_registry.rs  editor_tab.rs  game_view.rs  hierarchy.rs  lib.rs  meshless_visualizer.rs  mouse_check.rs  settings.rs  ui_registration.rs
crates/editor/src/asset_inspector/: mod.rs
crates/editor/src/inspector/: mod.rs  refl_impl.rs  resources.rs
crates/editor/src/terraingen/: inspector.rs  mod.rs
crates/editor/src/tools/: gizmo.rs
crates/editor_core/: Cargo.toml
crates/editor_core/src/: gltf_unpack.rs  hotkeys.rs  lib.rs  load.rs  selected.rs  task_storage.rs  toast.rs
crates/editor_game_view/: Cargo.toml
crates/editor_tabs/: Cargo.toml
crates/editor_tabs/src/: colors.rs  editor_tab.rs  lib.rs  schedule_editor_tab.rs  sizing.rs  start_layout.rs  tab_name.rs  tab_style.rs  tab_viewer.rs
crates/editor_ui/: Cargo.toml
crates/editor_ui/src/: bot_menu.rs  bottom_menu.rs  camera_plugin.rs  camera_view.rs  change_chain.rs  colors.rs  debug_panels.rs  editor_style.rs  editor_tab.rs  editor_tab_name.rs  game_view.rs  hierarchy.rs  icons.rs  lib.rs  menu_toolbars.rs  meshless_visualizer.rs  mouse_check.rs  selection.rs  settings.rs  sizing.rs  startup_systems.rs  systems_view.rs  tool.rs  tools.rs  ui_picking.rs  ui_plugin.rs  ui_registration.rs
crates/editor_ui/src/asset_inspector/: mod.rs
crates/editor_ui/src/inspector/: assets.rs  components_order.rs  events.rs  events_dispatcher.rs  mod.rs  refl_impl.rs  resources.rs  runtime_assets.rs
crates/editor_ui/src/tools/: gizmo.rs
crates/persistence/: Cargo.toml
crates/persistence/src/: lib.rs  tests.rs
crates/prefab/: Cargo.toml
crates/prefab/assets/: cube.glb  low_poly_fighter_2.gltf  test.ron
crates/prefab/src/: events.rs  lib.rs  load.rs  plugins.rs  save.rs  spawn_system.rs
crates/prefab/src/component/: camera.rs  material.rs  mod.rs  path.rs  player_start.rs  shape.rs  sprite.rs
crates/prefab/src/editor_registry/: mod.rs
crates/prefab/src/prefab/: load.rs  mod.rs
crates/prefab/src/prefab/component/: camera.rs  material.rs  mod.rs  shape.rs
crates/prefab/src/sub_scene/: mod.rs
crates/shared/: Cargo.toml
crates/shared/src/: asset_fs.rs  gizmos.rs  lib.rs  toast.rs
crates/undo/: Cargo.toml
crates/undo/src/: lib.rs  tests.rs
docs/: README.md  main.md  shortcuts.md
examples/: custom_editor_tab.rs  custom_event.rs  event_example.rs  gltf_unpack_example.rs  loading_test.rs  platformer.rs  space_example.rs  spawn_prefab.rs  spawn_prefab_with_physics.rs
game/: Cargo.toml
game/src/: lib.rs  main.rs
modules/bevy_mesh_terrain_plugin/: Cargo.toml
modules/bevy_mesh_terrain_plugin/src/: lib.rs  terrain_brush.rs  terrain_chunks.rs  terrain_tab.rs  terrain_tool.rs
modules/bevy_xpbd_plugin/: Cargo.toml
modules/bevy_xpbd_plugin/src/: collider.rs  lib.rs  registry.rs  spatial_query.rs
modules/bevy_xpbd_plugin/src/bevy_xpbd_plugin/: mod.rs  spatial_query.rs
modules/terrain_gen/: Cargo.toml
modules/terrain_gen/src/: lib.rs
modules/terrain_gen/src/heightmap/: mod.rs  smoothness.rs
modules/terrain_gen/src/inspector/: mod.rs  ui.rs
modules/terrain_gen/src/mesh/: mod.rs  systems.rs
modules/terraingen/: Cargo.toml
modules/terraingen/src/: biomes.rs  lib.rs  mesh.rs  resources.rs  systems.rs
modules/terraingen/src/resources/: mesh.rs
modules/voxel/: .gitignore  Cargo.toml  LICENSE  README.md
modules/voxel/.github/workflows/: rust.yml
modules/voxel/assets/fonts/: dogica_pixel_license.txt
modules/voxel/src/: lib.rs
modules/voxel/src/voxel/: material.rs  mod.rs  sdf.rs  voxel.rs
modules/voxel/src/voxel/render/: chunk_material.rs  mesh.rs  mod.rs
modules/voxel/src/voxel/storage/: buffer.rs  chunk_map.rs  mod.rs
modules/voxel/src/voxel/terraingen/: common.rs  mod.rs  noise.rs
modules/voxel/src/voxel/terraingen/biomes/: desert.rs  layered.rs  mod.rs  plains.rs  snowy_plains.rs
modules/voxel/src/voxel/world/: chunks.rs  chunks_anim.rs  materials.rs  meshing.rs  mod.rs  player.rs  sky.rs  terrain.rs
src/: lib.rs  main.rs
src/bot_menu/: mod.rs
src/editor/: mod.rs  ui_registration.rs
src/editor_registry/: mod.rs
src/hierarchy/: mod.rs
src/inspector/: mod.rs  registration.rs  ui_reflect.rs
src/optional/: mod.rs
src/prefab/: component.rs  load.rs  mod.rs  save.rs  save_load.rs  spawn_system.rs
test_data/: test_editor.ron
workspace-hakari/: Cargo.toml
(+55 files in other folders)
