[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy.workspace = true
shared.workspace = true
prefab.workspace = true
persistence.workspace = true
undo.workspace = true

[features]
persistence_editor = []
default = ["persistence_editor"]