[package]
name = "kcg_editor_core"
version.workspace = true
authors.workspace = true
edition.workspace = true 
license.workspace = true
description = "Subcrate for the kenney_city_editor crate. Contains the core functionality of the editor."
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy.workspace = true

kcg_prefab.workspace = true
kcg_undo.workspace = true
kcg_persistence.workspace = true
kcg_shared.workspace = true

bevy_egui_next.workspace = true
egui_dock.workspace = true
egui-toast.workspace = true

[features]
persistence_editor = []

[lints]
workspace = true