[package]
name = "space_editor_core"
version.workspace = true
authors.workspace = true
edition.workspace = true 
license.workspace = true
description = "Subcrate for the space_editor crate. Contains the core functionality of the editor."
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "dylib"]

[dependencies]
bevy.workspace = true

space_prefab.workspace = true
space_undo.workspace = true
space_persistence.workspace = true
space_shared.workspace = true

bevy_egui.workspace = true
egui_dock.workspace = true
egui-toast.workspace = true

[features]
dynamic_linking = [
    "bevy/dynamic_linking",
    "space_prefab/dynamic_linking",
    "space_undo/dynamic_linking",
    "space_persistence/dynamic_linking",
    "space_shared/dynamic_linking",
]
persistence_editor = []

[lints]
workspace = true