[package]
name = "space_editor_core"
version.workspace = true
authors.workspace = true
edition.workspace = true 
license.workspace = true
description = "Subcrate for the space_editor crate. Contains the core functionality of the editor."
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy.workspace = true

space_prefab.workspace = true
space_undo.workspace = true
space_persistence.workspace = true
space_shared.workspace = true

bevy_egui.workspace = true
egui_dock.workspace = true
egui-toast.workspace = true

bevy_mod_outline = {git = "https://github.com/komadori/bevy_mod_outline.git", optional = true}
workspace-hakari = { version = "0.1", path = "../../workspace-hakari" }

[features]
default = ["persistence_editor", "bevy_mod_outline"]
persistence_editor = []
bevy_mod_outline = ["dep:bevy_mod_outline"]

[lints]
workspace = true
