[package]
name = "kcg_persistence"
version.workspace = true
authors.workspace = true
edition.workspace = true 
license.workspace = true
description = "Subcrate for the kenney_city_editor crate. Contains the persistence code for the kenney_city_editor"
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy.workspace = true
ron.workspace = true 
serde.workspace = true

[lints]
workspace = true