[package]
name = "space_persistence"
version.workspace = true
authors.workspace = true
edition.workspace = true 
license.workspace = true
description = "Subcrate for the space_editor crate. Contains the persistence code for the space_editor"
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["dylib"]

[features]
dynamic_linking = ["bevy/dynamic_linking",]

[dependencies]
bevy.workspace = true
ron.workspace = true 
serde.workspace = true

[lints]
workspace = true