[package]
name = "space_prefab"
version.workspace = true
authors.workspace = true
edition.workspace = true 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy.workspace = true
ron.workspace = true
serde.workspace = true
space_shared.workspace = true
space_undo.workspace = true
egui_file.workspace = true
bevy-inspector-egui.workspace = true

bevy-scene-hook = "9"
