[package]
name = "space_prefab"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Subcrate for the space_editor crate. Contains the prefab systems and components."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no_event_registration = []
editor = []

[dependencies]
bevy.workspace = true
space_shared.workspace = true
space_undo.workspace = true

bevy-scene-hook.workspace = true
bevy-inspector-egui.workspace = true

serde = "1"
ron.workspace = true

[lints]
workspace = true
