[package]
name = "space_shared"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Subcrate for the space_editor crate. Contains the common types used in the space_editor"
repository.workspace = true
homepage.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy.workspace = true


bevy-inspector-egui = { version = "0.22", features = [
    "bevy_pbr",
    "highlight_changes",
] }
egui_file = { git = "https://github.com/Barugon/egui_file.git" }
