[package]
name = "space_shared"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Subcrate for the space_editor crate. Contains the common types used in the space_editor"
repository.workspace = true
homepage.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy.workspace = true

anyhow.workspace = true
bevy-inspector-egui.workspace = true
egui_file.workspace = true
egui-toast.workspace = true
image.workspace = true

[lints]
workspace = true