[package]
name = "space_undo"
version.workspace = true
authors.workspace = true
edition.workspace = true 
license.workspace = true
description = "Subcrate for the space_editor crate. Contains undo functionality."
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy.workspace = true
pretty-type-name.workspace = true

[lints]
workspace = true