[package]
name = "space_bevy_xpbd_plugin"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy.workspace = true 
space_editor_ui.workspace = true
bevy-inspector-egui.workspace = true
bevy_xpbd_3d = {version="0.3.2", default-features = false, features = ["3d", "f32", "collider-from-mesh", "debug-plugin"]}