[package]
# This library can be used as standalone
name = "terrain_gen"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Julia Naomi <jnboeira@outlook.com>", "rewin <rewin1996@gmail.com>"]
keywords = ["terrain", "heightmap", "gamedev"]
categories = ["game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy.workspace = true
bevy-inspector-egui.workspace = true
space_editor_ui.workspace = true
space_editor_core.workspace = true
space_prefab.workspace = true
space_undo.workspace = true
space_persistence.workspace = true
space_shared.workspace = true

noise = "0.8"
lerp = { version = "0.4", features = ["derive"] }

[features]
meshed = []
space_editor = []
default = ["space_editor", "meshed"]